--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,68 +1,68 @@
 <section>
-    <slider></slider>
+  <slider></slider>
 
+  <div class="container">
+    <featured-products></featured-products>
+  </div>
+  <div class="rapair-service" data-aos="zoom-in-up">
     <div class="container">
-        <featured-products></featured-products>
-    </div>
-    <div class="rapair-service">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <p>Repair Service</p>
-                </div>
-                <div class="col-md-12">
-                    <h1 class="offer">Up to <span class="persentage-offer">70% Off</span>- All T-Shirts &amp; Accessories </h1>
-                </div>
-                <div class="col-md-12">
-                    <button class="offer-btn">Explore More</button>
-                </div>
-            </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p>Repair Service</p>
         </div>
+        <div class="col-md-12">
+          <h1 class="offer">Up to <span class="persentage-offer">70% Off</span>- All T-Shirts &amp; Accessories </h1>
+        </div>
+        <div class="col-md-12">
+          <button class="offer-btn">Explore More</button>
+        </div>
+      </div>
     </div>
-    <div class="container">
-        <arrivals-products></arrivals-products>
-        <section class="small-banners">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="crazy-banner">
-                        <p>Crazy deals </p>
-                        <h1 class="banner-title">buy 1 get 1 free</h1>
-                        <p class="description">the best classic dress is on sale at cara</p>
-                        <button class="crazy-btn">learn more</button>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="spring-banner">
-                        <p>spring/Summer </p>
-                        <h1 class="banner-title">upcomming season</h1>
-                        <p class="description">the best classic dress is on sale at cara</p>
-                        <button class="spring-btn">Collection</button>
+  </div>
+  <div class="container">
+    <arrivals-products></arrivals-products>
+    <section class="small-banners">
+      <div class="row">
+        <div class="col-md-6" data-aos="fade-right">
+          <div class="crazy-banner">
+            <p>Crazy deals </p>
+            <h1 class="banner-title">buy 1 get 1 free</h1>
+            <p class="description">the best classic dress is on sale at cara</p>
+            <button class="crazy-btn">learn more</button>
+          </div>
+        </div>
+        <div class="col-md-6" data-aos="fade-left">
+          <div class="spring-banner">
+            <p>spring/Summer </p>
+            <h1 class="banner-title">upcomming season</h1>
+            <p class="description">the best classic dress is on sale at cara</p>
+            <button class="spring-btn">Collection</button>
 
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="winter-banner">
-                        <h1 class="banner-title">{{'seasonal sale' | uppercase }}</h1>
-                        <h3 class="banner-description">Winter Collection -50% OFF</h3>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="summer-banner">
-                        <h1 class="banner-title">{{'New footwear collection'| uppercase}}</h1>
-                        <h3 class="banner-description">Spring / Summer 2022</h3>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="trendy-banner">
-                        <h1 class="banner-title">{{'T-shirts'| uppercase}}</h1>
-                        <h3 class="banner-description">New  Trendy Printe</h3>
-                    </div>
-                </div>
-            </div>
-        </section>
-        
-    </div>
-    <sign-up-section></sign-up-section>
+          </div>
+        </div>
+        <div class="col-md-4" data-aos="fade-up-right">
+          <div class="winter-banner">
+            <h1 class="banner-title">{{'seasonal sale' | uppercase }}</h1>
+            <h3 class="banner-description">Winter Collection -50% OFF</h3>
+          </div>
+        </div>
+        <div class="col-md-4" data-aos="fade-up">
+          <div class="summer-banner">
+            <h1 class="banner-title">{{'New footwear collection'| uppercase}}</h1>
+            <h3 class="banner-description">Spring / Summer 2022</h3>
+          </div>
+        </div>
+        <div class="col-md-4" data-aos="fade-up-left">
+          <div class="trendy-banner">
+            <h1 class="banner-title">{{'T-shirts'| uppercase}}</h1>
+            <h3 class="banner-description">New Trendy Printe</h3>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </div>
+  <sign-up-section></sign-up-section>
 </section>
 
 <!--<div class="row">
