--- a/src/app/modules/shop/slider/slider.component.html
+++ b/src/app/modules/shop/slider/slider.component.html
@@ -1,4 +1,7 @@
 <div class="slider">
+  <div data-aos="fade-down">
     <h1 class="title">#stayhome</h1>
     <p>Save more with coupons &amp; up to 70% offer!</p>
+  </div>
+
 </div>
