--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-    <footer class="row row-cols-5 py-5 my-5 ">
-        <div class="col-md-5">
-          <a href="/" routerLink="home" class="d-flex align-items-center mb-3 link-dark text-decoration-none mb-4">
+    <footer class="row  py-5 my-5 ">
+        <div class="col-md-6 col-lg-4 mb-5 nav-block">
+          <a  routerLink="home" class="d-flex align-items-center  mb-4 logo">
             
             <img src="../../../assets/images/logo.png" alt="" >
             
@@ -24,7 +24,7 @@
     
 
     
-        <div class="col-md-2">
+        <div class="col-md-6 col-lg-2 mb-5 nav-block">
           <h5 class="section-title">About</h5>
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About Us</a></li>
@@ -35,7 +35,7 @@
           </ul>
         </div>
     
-        <div class="col-md-2">
+        <div class="col-md-6 col-lg-2 nav-block">
           <h5 class="section-title">My Account</h5>
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a routerLink="signin" class="nav-link p-0 text-muted">Sign In</a></li>
@@ -46,12 +46,12 @@
           </ul>
         </div>
     
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-4 nav-block">
           <h5 class="section-title">Install App</h5>
-          <ul class="nav flex-column">
+          <ul class="nav ">
             <li class="nav-item mb-3">From App Store or Google Play</li>
-            <li class="nav-item mb-2 d-flex">
-                <a href="https://www.apple.com" target="_blank" class="nav-link p-0 me-2 ">
+            <li class="nav-item mb-2 ">
+                <a href="https://www.apple.com" target="_blank" class="nav-link p-0 me-2 mb-2 ">
                     <img src="../../../assets/images/pay/app.jpg"  alt="" class="cara-app">
                 </a>
                 <a href="https://play.google.com" target="_blank" class="nav-link p-0  ">
