--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -5,6 +5,54 @@ header{
     .navbar{
         padding: 25px 0px 25px 0px ;
     }
+    
+    @media (max-width: 991.98px) { 
+        .navbar-nav {
+            margin-top: 30px;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            .nav-item{
+                width: fit-content;
+                &:last-of-type{
+                    margin-right: auto !important;
+                }
+            }
+            
+            
+        }
+     }
+     @media (max-width: 575.98px) { 
+        .navbar-nav {
+                padding: 50px 30px;
+                justify-content: center;
+                
+                    
+                .nav-item:last-of-type{
+                    margin-right: 20px !important;
+                
+                }
+            }
+    }
+    .navbar-toggler{
+        border: 2px solid #088178;
+        background-color: #088178;
+        padding: 0.45rem 0.75rem;
+        &:focus{
+            box-shadow: 0px 0px 0px 0px transparent ;
+        }
+        span.navbar-icon {
+            display: block;
+            width: 25px;
+            height: 2px;
+            background-color: #fff;
+            margin-bottom: 7px;
+            border-radius: 20px;
+            &:last-child{
+                margin-bottom: 0px;
+            }
+        }
+    }
     .nav-item{
         .nav-link{
             font-size: 16px;
@@ -27,5 +75,9 @@ header{
     .logout-btn{
         background-color: #088178;
         font-weight: 500;
+        border: none;
+        &:focus{
+            box-shadow: 0 0 0 0 transparent;
+        }
     }
 }
