--- a/src/app/modules/cart/cart.component.html
+++ b/src/app/modules/cart/cart.component.html
@@ -1,22 +1,23 @@
 <div class="shopping-cart">
-    <div class="container">
-        <div class="row" *ngFor="let product of shooping; index as i">
-            <div class="col-md-6" >
-                <img src="" alt="">
-            </div>
-            <div class="col-md-6 mb-5">
-                <div >
-                    <nav><a routerLink="home">Home</a>/ <a href="#">T-shirt</a></nav>
-                    <div class="product-title"> {{product.name}} </div>
-                    <div class="product-price"> {{product.price | currency}} </div>
-                    <input type="number" name="" id="" class="amount" [(ngModel)]="product.amount">
-                    <div class="totlal-price"> {{product.price!*product.amount! | currency}} </div>
-                    <button class="btn btn-primary" (click)="updateProduct(i)" > Update </button>
-                    <button class="btn btn-success" (click)="deleteProduct(i)">delete</button>
-                </div>
-                
+  <div class="container">
+    <div class="row" *ngFor="let product of shooping; index as i">
+      <div class="col-md-2 mb-3">
+        <img src="{{product.imageUrl}}" alt="t-shirt item" width="200px">
+      </div>
+      <div class="col-md-10  cart-items">
+        <div>
+          <nav><a routerLink="home">Home</a>/ <a href="#">T-shirt</a></nav>
 
-            </div>
+          <div class="product-title"> {{product.name}} </div>
+          <div class="product-price"> {{product.price | currency}} </div>
+          <input type="number" name="" id="" class="amount" [(ngModel)]="product.amount">
+          <div class="totlal-price"> {{product.price!*product.amount! | currency}} </div>
+          <button class="btn btn-primary" (click)="updateProduct(i)"> Update </button>
+          <button class="btn btn-success" (click)="deleteProduct(i)">delete</button>
         </div>
+
+
+      </div>
     </div>
+  </div>
 </div>
