--- a/src/app/modules/signin/signin.component.html
+++ b/src/app/modules/signin/signin.component.html
@@ -1,55 +1,55 @@
 <div class="sign-in">
-    <div class="container">
-        <div class="form-section">
-        <h2 class="text-center title">Sign in</h2>
+  <div class="container">
+    <div class="form-section">
+      <h2 class="text-center title">Sign in</h2>
 
-            <form [formGroup]="signInForm" >
-            
-                <div class="mb-5">
-                    <label for="emailId" class="form-label">Email </label>
-                    <input type="email" formControlName="email" class="form-control" id="emailId" aria-describedby="emailHelp">
-                    
-                    <div *ngIf="email?.invalid && email?.touched ">
-                        <small *ngIf="email?.errors?.['required']" class="text-danger">Please Enter Your Email</small>
-                        <small *ngIf="email?.errors?.['email']" class="text-danger">follow the email style</small>
-                    </div>
-                </div>
-                <div class="mb-5 pass-box">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" [type]="show ? 'text' : 'password'" class="form-control" id="password"
-                        formControlName="password" minlength="6">
-                    <span (click)="showPasswordPassword()" *ngIf="this.show" class="display-pass">
-                        <i class="fa-solid fa-eye"></i>
-                    </span>
-                    <span (click)="showPasswordPassword()" *ngIf="!this.show" class="display-pass">
-                        <i class="fa-solid fa-eye-slash"></i>
-                    </span>
-                    <div *ngIf="password?.touched && password?.invalid">
-                        <small *ngIf="password?.errors?.['required']" class="text-danger">Enter The Password </small>
-                        <small *ngIf="password?.errors?.['noSpace']" class="text-danger"> Space Not Allowed </small>
-                        <small *ngIf="password?.hasError('minlength')" class="text-danger">Min Length 6 numbers or char</small>
-        
-                    </div>
-                </div>
-                <div class="text-center">
-                    <button type="submit" class="btn btn-primary"  (click)="signIn(signInForm)">Submit</button>
+      <form [formGroup]="signInForm">
 
-                </div>
-                <br>
-                <div class="alert alert-danger" *ngIf="errorMassage">
-                    {{errorMassage}}
-                </div>
-            </form>
+        <div class="mb-5">
+          <label for="emailId" class="form-label">Email </label>
+          <input type="email" formControlName="email" class="form-control" id="emailId" aria-describedby="emailHelp">
+
+          <div *ngIf="email?.invalid && email?.touched ">
+            <small *ngIf="email?.errors?.['required']" class="text-danger">Please Enter Your Email</small>
+            <small *ngIf="email?.errors?.['email']" class="text-danger">follow the email style</small>
+          </div>
+        </div>
+        <div class="mb-5 pass-box">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" [type]="show ? 'text' : 'password'" class="form-control" id="password"
+            formControlName="password" minlength="6">
+          <span (click)="showPasswordPassword()" *ngIf="this.show" class="display-pass">
+            <i class="fa-solid fa-eye"></i>
+          </span>
+          <span (click)="showPasswordPassword()" *ngIf="!this.show" class="display-pass">
+            <i class="fa-solid fa-eye-slash"></i>
+          </span>
+          <div *ngIf="password?.touched && password?.invalid">
+            <small *ngIf="password?.errors?.['required']" class="text-danger">Enter The Password </small>
+            <small *ngIf="password?.errors?.['noSpace']" class="text-danger"> Space Not Allowed </small>
+            <small *ngIf="password?.hasError('minlength')" class="text-danger">Min Length 6 numbers or char</small>
+
+          </div>
+        </div>
+        <div class="text-center">
+          <button type="submit" class="btn btn-primary" (click)="signIn(signInForm)">Submit</button>
+          <!--(click)="signIn(signInForm)"-->
+        </div>
+        <br>
+        <div class="alert alert-danger" *ngIf="errorMassage">
+          {{errorMassage}}
+        </div>
+      </form>
     </div>
-    </div>
-
-
-    
-    
+  </div>
 
 
 
-    <!--<form #f="ngForm">
+
+
+
+
+  <!--<form #f="ngForm">
         <input ngModel type="text" class="form-control mb-2" placeholder="Your Name" required>
         <input ngModel type="email" class="form-control mb-2" placeholder="Your email" required>
         <input ngModel type="password" class="form-control mb-2" #pass="ngModel" placeholder="Your password" required>
