--- a/src/app/shared/sign-up-section/sign-up-section.component.html
+++ b/src/app/shared/sign-up-section/sign-up-section.component.html
@@ -1,16 +1,19 @@
-<section class="sign-up">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="title">Sign Up For Newsletters</div>
-                <div class="description">Get E-Mail updates about our latest shop and <span ><a href="#" class="offer">special offers</a></span> </div>
-            </div>
-            <div class="col-md-6">
-                <div class="input-group mb-3">
-                    <input type="email" class="form-control" aria-label="Sizing example input" aria-describedby="sign-up-input" placeholder="Your email address">
-                    <button class="btn btn-outline-secondary sign-up-btn" type="submit" id="sign-up-input" routerLink="/signup" >Sign Up</button>
-                </div>
-            </div>
+<section class="sign-up" data-aos="zoom-in-up">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-12">
+        <div class="title">Sign Up For Newsletters</div>
+        <div class="description">Get E-Mail updates about our latest shop and <span><a href="#" class="offer">special
+              offers</a></span> </div>
+      </div>
+      <div class="col-lg-6 col-md-12">
+        <div class="input-group mb-3">
+          <input type="email" class="form-control" aria-label="Sizing example input" aria-describedby="sign-up-input"
+            placeholder="Your email address">
+          <button class="btn btn-outline-secondary sign-up-btn" type="submit" id="sign-up-input"
+            routerLink="/signup">Sign Up</button>
         </div>
+      </div>
     </div>
+  </div>
 </section>
