--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,26 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
 /*Importing color variables*/
-@import '../src/app/shared/variables';
+@import "../src/app/shared/variables";
 /* shared style between component*/
-@import '../src/app/modules/home/featured-products/featured-products.component.scss';
-@import '../src/app/modules/shop/slider/slider.component.scss';
+@import "../src/app/modules/home/featured-products/featured-products.component.scss";
+@import "../src/app/modules/shop/slider/slider.component.scss";
 
 /* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
 
 /*Importing fontawsome*/
-@import '~@fortawesome/fontawesome-free/css/all.min.css';
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
 
 /*google font*/
-@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@200;300;400;500;700;800;900&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Spartan', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@200;300;400;500;700;800;900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Spartan", sans-serif;
 }
-body{
-    font-family: 'Spartan', sans-serif;
+body {
+  font-family: "Spartan", sans-serif;
+  overflow-x: hidden;
 }
 
 // .router-coontainer{
@@ -33,3 +34,5 @@ body{
 //     }
 // }
 
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
